added the title to the paper

--- a/LaTeX/cs333project.tex
+++ b/LaTeX/cs333project.tex
@@ -9,7 +9,8 @@
 
 \begin{document}
 
-\title{\huge\textbf{CS 333 Project Report}}
+\title{\huge\textbf{CS 333 Project Report \\
+\small A Method for Obtaining Digital Signatures and Public-Key Cryptosystems}}
 \author{
 Egemen İşcan\\
 egemen.iscan@ozu.edu.tr
